[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/farms.gd" type="Script" id=1]
[ext_resource path="res://scenes/tilemaps/farms.tmx" type="PackedScene" id=2]
[ext_resource path="res://scripts/tiled_farms.gd" type="Script" id=3]
[ext_resource path="res://scenes/objects/well.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/sell_box.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/pedestrian_spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/objects/timer.tscn" type="PackedScene" id=12]
[ext_resource path="res://fonts/m5x7_big.tres" type="DynamicFont" id=13]
[ext_resource path="res://scenes/objects/seed_truck.tscn" type="PackedScene" id=14]
[ext_resource path="res://sounds/countdown_beep.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/go_beep.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/end_gong.wav" type="AudioStream" id=17]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TiledMap" parent="." instance=ExtResource( 2 )]
position = Vector2( -16, -16 )
script = ExtResource( 3 )

[node name="SellBox" parent="TiledMap" instance=ExtResource( 5 )]
position = Vector2( 272, 223 )

[node name="Well" parent="TiledMap" instance=ExtResource( 4 )]
position = Vector2( 236, 223 )

[node name="SeedTruck" parent="TiledMap" instance=ExtResource( 14 )]
position = Vector2( 254, 32 )

[node name="PedestrianSpawner" parent="TiledMap" instance=ExtResource( 6 )]
position = Vector2( 16, 152 )

[node name="RoundTimer" parent="." instance=ExtResource( 12 )]
position = Vector2( 301, 32 )

[node name="Label" type="Label" parent="."]
margin_left = 232.0
margin_top = 120.0
margin_right = 296.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 13 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CountdownBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="GoBeep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="EndGong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
